--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,8 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
-  <app-root></app-root>
+<div id="calendar">
+<mwl-demo-component>Loading...</mwl-demo-component>
+</div>
 </body>
 </html>
